fix: increased spacing of md variant, added separators

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -77,8 +77,12 @@
 	}
 }
 
+* {
+	scrollbar-gutter: stable;
+}
+
 ::-webkit-scrollbar {
-	width: 5px;
+	width: 6px;
 }
 
 /* Track */
